[gd_scene load_steps=40 format=2]

[ext_resource path="res://Scenes/GrumpyQuestion.gd" type="Script" id=1]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_1.png" type="Texture" id=2]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_5.png" type="Texture" id=3]
[ext_resource path="res://Scenes/SpeechBubble.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_10.png" type="Texture" id=5]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_10.png" type="Texture" id=6]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_4.png" type="Texture" id=7]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_3.png" type="Texture" id=8]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_14.png" type="Texture" id=9]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_1.png" type="Texture" id=10]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_5.png" type="Texture" id=11]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_9.png" type="Texture" id=12]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_13.png" type="Texture" id=13]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_11.png" type="Texture" id=14]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_8.png" type="Texture" id=15]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_7.png" type="Texture" id=16]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_2.png" type="Texture" id=17]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_7.png" type="Texture" id=18]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_4.png" type="Texture" id=19]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_8.png" type="Texture" id=20]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_15.png" type="Texture" id=21]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_6.png" type="Texture" id=22]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_6.png" type="Texture" id=23]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_3.png" type="Texture" id=24]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_9.png" type="Texture" id=25]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_2.png" type="Texture" id=26]
[ext_resource path="res://Art/Pixeltype.ttf" type="DynamicFontData" id=27]
[ext_resource path="res://Art/Calibri.tres" type="DynamicFont" id=28]
[ext_resource path="res://Scenes/ScoreMessage.tscn" type="PackedScene" id=29]
[ext_resource path="res://Assets/Sounds/correct_answer.mp3" type="AudioStream" id=30]
[ext_resource path="res://Assets/Sounds/wrong_answer.mp3" type="AudioStream" id=31]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Art/Pixeltype.ttf"

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Art/Pixeltype.ttf"

[sub_resource type="DynamicFont" id=4]
size = 72
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Art/Pixeltype.ttf"

[sub_resource type="DynamicFont" id=6]
size = 72
font_data = SubResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 64
extra_spacing_space = 1
font_data = ExtResource( 27 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 17 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 23 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 25 ), ExtResource( 5 ) ],
"loop": true,
"name": "hiss",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 19 ), ExtResource( 11 ), ExtResource( 22 ), ExtResource( 16 ), ExtResource( 20 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="main" type="Node2D"]
z_index = 3
script = ExtResource( 1 )

[node name="SpeechBubble" parent="." instance=ExtResource( 4 )]
position = Vector2( 382, 0 )

[node name="Button1" type="Button" parent="."]
margin_left = 580.0
margin_top = 300.0
margin_right = 1805.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 2 )

[node name="Button2" type="Button" parent="."]
margin_left = 580.0
margin_top = 450.0
margin_right = 1805.0
margin_bottom = 550.0
custom_fonts/font = SubResource( 4 )

[node name="Button3" type="Button" parent="."]
margin_left = 580.0
margin_top = 600.0
margin_right = 1805.0
margin_bottom = 700.0
custom_fonts/font = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 801.0
margin_top = 714.0
margin_right = 1682.0
margin_bottom = 1004.0
custom_fonts/normal_font = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -422, 377 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 7 )
frame = 8
speed_scale = 0.5
playing = true

[node name="NextButton" type="Button" parent="."]
margin_left = 1339.0
margin_top = 946.0
margin_right = 1776.0
margin_bottom = 1059.0
custom_fonts/font = ExtResource( 28 )
text = "Volgende vraag!"

[node name="ScoreMessage" parent="." instance=ExtResource( 29 )]
visible = false

[node name="CorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 30 )

[node name="WrongSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 31 )

[connection signal="fly_in_finished" from="." to="." method="_on_main_fly_in_finished"]
[connection signal="pressed" from="Button1" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
